Adding suggestion list

--- a/css/_modenocday.scss
+++ b/css/_modenocday.scss
@@ -1,5 +1,4 @@
-@media (prefers-color-scheme: dark) {
-    body {
+body.dark {
         #crearGif_text {
             color: white;
         }
@@ -278,5 +277,4 @@
                 color: black;
             }
         }
-    }
 }
