--- a/css/_btn.scss
+++ b/css/_btn.scss
@@ -7,3 +7,10 @@
         cursor: pointer;
     }
 }
+
+.button {
+    margin-top: 10px;
+    border: 1px solid $lightpurplecolor;
+    padding: 10px 15px;
+    border-radius: 1rem;
+}
