--- a/css/_modenocday.scss
+++ b/css/_modenocday.scss
@@ -1,4 +1,11 @@
 body.dark {
+    .nav_container--suggestions{
+        li{
+            &:hover {
+                color: white;
+            }
+        }
+    }
         #crearGif_text {
             color: white;
         }
