--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1525,6 +1525,10 @@ body.dark {
   color: white;
 }
 
+body.dark .nav_container--suggestions li:hover {
+  color: white;
+}
+
 body.dark #crearGif_text {
   color: white;
 }
