--- a/css/_placegiftcrafter.scss
+++ b/css/_placegiftcrafter.scss
@@ -96,6 +96,7 @@
                     }
                 }
                 h4 {
+                    color: white;
                     justify-self: flex-end;
                     align-self: flex-end;
                     padding-bottom: 20px;
