--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1512,6 +1512,7 @@ footer .copyright {
     width: 40px;
   }
   #gifobuilder .placeholder .btnholder h4, #misFavor .placeholder .btnholder h4, #edifMisGifs .placeholder .btnholder h4 {
+    color: white;
     justify-self: flex-end;
     -ms-flex-item-align: end;
         align-self: flex-end;
