Darkmode rework on Create Gifo

--- a/css/_modenocday.scss
+++ b/css/_modenocday.scss
@@ -1,4 +1,6 @@
 body.dark {
+    background-color: rgb(47, 47, 47);
+    color: white;
     .nav_container--suggestions{
         li{
             &:hover {
