--- a/css/_placegiftcrafter.scss
+++ b/css/_placegiftcrafter.scss
@@ -4,8 +4,8 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(auto-fill, 1fr);
     width: 90%;
+    margin-left: 65px;
     gap: 0 21px;
-    margin-left: 5%;
     .placeholder {
         display: grid;
         grid-template-columns: 1fr;
@@ -51,56 +51,55 @@
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 200px repeat(auto-fill, 200px);
         width: 90%;
-        margin: 0px;
-        margin-left: 5%;
         gap: 10px 21px;
-        img {
-            width: 100%;
-            height: 100%;
-            grid-row-start: 1;
-            grid-column-start: 1;
-        }
-        .placeholder {
+        justify-items: center;
+        .searchitem {
             display: grid;
+            width: 240px;
+            height: 200px;
+            margin: 20px 0px;
             grid-template-columns: 1fr;
             grid-template-rows: 1fr;
-            width: 100%;
-            height: auto;
-            justify-self: center;
-            justify-items: center;
             img {
-                width: 100%;
-                height: 190px;
                 grid-row-start: 1;
                 grid-column-start: 1;
+                width: inherit;
+                height: inherit;
             }
-            .btnholder {
-                display: none;
-                width: 100%;
-                height: 190px;
-                max-height: 200px;
+            .placeholder {
+                display: grid;
                 margin: 0px;
-                z-index: 10;
-                background: rgba(87, 46, 229, 0.7);
-                justify-content: flex-end;
                 grid-row-start: 1;
                 grid-column-start: 1;
-                .iconholder {
-                    display: inherit;
-                    width: 45px;
-                    margin: 10px 10px;
-                    height: 45px;
-                    z-index: 4;
-                    img {
-                        width: 40px;
+                width: inherit;
+                height: inherit;
+                .btnholder {
+                    grid-column-start: 1;
+                    grid-row-start: 1;
+                    z-index: 5;
+                    display: none;
+                    justify-content: flex-end;
+                    background: rgba(87, 46, 229, 0.7);
+                    margin: 0px;
+                    padding-top: 10px;
+                    padding-right: 10px;
+                    .iconholder {
+                        width: 15%;
+                        align-self: flex-start;
+                        justify-self: flex-end;
+                        margin: 0px 5px;
+                        img {
+                            width: 45px;
+                        }
                     }
-                }
-                h4 {
-                    color: white;
-                    justify-self: flex-end;
-                    align-self: flex-end;
-                    padding-bottom: 20px;
-                    padding-left: 10px;
+                    h4 {
+                        justify-self: flex-end;
+                        align-self: flex-end;
+                        color: white;
+                        padding-bottom: 20px;
+                        padding-left: 10px;
+                        font-size: 14px;
+                    }
                 }
             }
         }
