--- a/css/_trending.scss
+++ b/css/_trending.scss
@@ -55,26 +55,37 @@
             width: 100%;
             height: auto;
             overflow-x: scroll;
+            margin: 0px 5%;
         }
     }
 }
 
-.trendholder {
-    height: 165px;
+// ###################### CSS del Overlay, objetivamente debe cambiarse
+
+.item {
     display: grid;
-    grid-template-columns: 275px;
-    grid-template-rows: auto;
+    grid-template-columns: 270px;
+    grid-template-rows: 180px;
     margin: 0px 20px;
-    img {
+    .trendholder {
+        width: 100%;
+        height: 100%;
         grid-column-start: 1;
         grid-row-start: 1;
         margin: 0px;
-        padding: 0px;
-        width: 100%;
-        height: inherit;
     }
+    img {
+            grid-column-start: 1;
+            grid-row-start: 1;
+            margin: 0px;
+            padding: 0px;
+            width: 100%;
+            height: 100%;
+        }
+    
 }
 
+// #################### ID de los Trendings Sugeridos y sus estilos ###############################
 #container-trending {
     display: flex;
     flex-direction: row;
@@ -94,6 +105,12 @@
 }
 
 @media (min-width: 940px) {
+    .item {
+        display: grid;
+        grid-template-columns: 275px;
+        grid-template-rows: 275px;
+        margin: 0px 20px;
+    }
     .trendholder {
         width: 100%;
         height: 275px;
