--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -679,20 +679,30 @@ nav .navsphere input {
   width: 100%;
   height: auto;
   overflow-x: scroll;
+  margin: 0px 5%;
 }
 
-.trendholder {
-  height: 165px;
+.item {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 275px;
-      grid-template-columns: 275px;
-  -ms-grid-rows: auto;
-      grid-template-rows: auto;
+  -ms-grid-columns: 270px;
+      grid-template-columns: 270px;
+  -ms-grid-rows: 180px;
+      grid-template-rows: 180px;
   margin: 0px 20px;
 }
 
-.trendholder img {
+.item .trendholder {
+  width: 100%;
+  height: 100%;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  margin: 0px;
+}
+
+.item img {
   -ms-grid-column: 1;
       grid-column-start: 1;
   -ms-grid-row: 1;
@@ -700,7 +710,7 @@ nav .navsphere input {
   margin: 0px;
   padding: 0px;
   width: 100%;
-  height: inherit;
+  height: 100%;
 }
 
 #container-trending {
@@ -731,6 +741,15 @@ nav .navsphere input {
 }
 
 @media (min-width: 940px) {
+  .item {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 275px;
+        grid-template-columns: 275px;
+    -ms-grid-rows: 275px;
+        grid-template-rows: 275px;
+    margin: 0px 20px;
+  }
   .trendholder {
     width: 100%;
     height: 275px;
@@ -1389,8 +1408,8 @@ footer .copyright {
   -ms-grid-rows: (1fr)[auto-fill];
       grid-template-rows: repeat(auto-fill, 1fr);
   width: 90%;
+  margin-left: 65px;
   gap: 0 21px;
-  margin-left: 5%;
 }
 
 #gifobuilder .placeholder, #misFavor .placeholder, #edifMisGifs .placeholder {
@@ -1452,72 +1471,72 @@ footer .copyright {
     -ms-grid-rows: 200px (200px)[auto-fill];
         grid-template-rows: 200px repeat(auto-fill, 200px);
     width: 90%;
-    margin: 0px;
-    margin-left: 5%;
     gap: 10px 21px;
+    justify-items: center;
   }
-  #gifobuilder img, #misFavor img, #edifMisGifs img {
-    width: 100%;
-    height: 100%;
-    -ms-grid-row: 1;
-        grid-row-start: 1;
-    -ms-grid-column: 1;
-        grid-column-start: 1;
-  }
-  #gifobuilder .placeholder, #misFavor .placeholder, #edifMisGifs .placeholder {
+  #gifobuilder .searchitem, #misFavor .searchitem, #edifMisGifs .searchitem {
     display: -ms-grid;
     display: grid;
+    width: 240px;
+    height: 200px;
+    margin: 20px 0px;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     -ms-grid-rows: 1fr;
         grid-template-rows: 1fr;
-    width: 100%;
-    height: auto;
-    -ms-grid-column-align: center;
-        justify-self: center;
-    justify-items: center;
   }
-  #gifobuilder .placeholder img, #misFavor .placeholder img, #edifMisGifs .placeholder img {
-    width: 100%;
-    height: 190px;
+  #gifobuilder .searchitem img, #misFavor .searchitem img, #edifMisGifs .searchitem img {
     -ms-grid-row: 1;
         grid-row-start: 1;
     -ms-grid-column: 1;
         grid-column-start: 1;
+    width: inherit;
+    height: inherit;
   }
-  #gifobuilder .placeholder .btnholder, #misFavor .placeholder .btnholder, #edifMisGifs .placeholder .btnholder {
-    display: none;
-    width: 100%;
-    height: 190px;
-    max-height: 200px;
+  #gifobuilder .searchitem .placeholder, #misFavor .searchitem .placeholder, #edifMisGifs .searchitem .placeholder {
+    display: -ms-grid;
+    display: grid;
     margin: 0px;
-    z-index: 10;
-    background: rgba(87, 46, 229, 0.7);
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    width: inherit;
+    height: inherit;
+  }
+  #gifobuilder .searchitem .placeholder .btnholder, #misFavor .searchitem .placeholder .btnholder, #edifMisGifs .searchitem .placeholder .btnholder {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+    z-index: 5;
+    display: none;
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
-    -ms-grid-row: 1;
-        grid-row-start: 1;
-    -ms-grid-column: 1;
-        grid-column-start: 1;
+    background: rgba(87, 46, 229, 0.7);
+    margin: 0px;
+    padding-top: 10px;
+    padding-right: 10px;
   }
-  #gifobuilder .placeholder .btnholder .iconholder, #misFavor .placeholder .btnholder .iconholder, #edifMisGifs .placeholder .btnholder .iconholder {
-    display: inherit;
+  #gifobuilder .searchitem .placeholder .btnholder .iconholder, #misFavor .searchitem .placeholder .btnholder .iconholder, #edifMisGifs .searchitem .placeholder .btnholder .iconholder {
+    width: 15%;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    justify-self: flex-end;
+    margin: 0px 5px;
+  }
+  #gifobuilder .searchitem .placeholder .btnholder .iconholder img, #misFavor .searchitem .placeholder .btnholder .iconholder img, #edifMisGifs .searchitem .placeholder .btnholder .iconholder img {
     width: 45px;
-    margin: 10px 10px;
-    height: 45px;
-    z-index: 4;
   }
-  #gifobuilder .placeholder .btnholder .iconholder img, #misFavor .placeholder .btnholder .iconholder img, #edifMisGifs .placeholder .btnholder .iconholder img {
-    width: 40px;
-  }
-  #gifobuilder .placeholder .btnholder h4, #misFavor .placeholder .btnholder h4, #edifMisGifs .placeholder .btnholder h4 {
-    color: white;
+  #gifobuilder .searchitem .placeholder .btnholder h4, #misFavor .searchitem .placeholder .btnholder h4, #edifMisGifs .searchitem .placeholder .btnholder h4 {
     justify-self: flex-end;
     -ms-flex-item-align: end;
         align-self: flex-end;
+    color: white;
     padding-bottom: 20px;
     padding-left: 10px;
+    font-size: 14px;
   }
 }
 
